[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/GameMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/SettingsPanel.tscn" type="PackedScene" id=3]

[node name="Game Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Main" parent="." instance=ExtResource( 2 )]

[node name="Settings" parent="." instance=ExtResource( 3 )]
offset = Vector2( 576, 0 )
transform = Transform2D( 1, 0, 0, 1, 576, 0 )

[connection signal="play_pressed" from="Main" to="." method="_on_Main_play_pressed"]
[connection signal="settings_pressed" from="Main" to="." method="_on_Main_settings_pressed"]
[connection signal="back_button" from="Settings" to="." method="_on_Settings_back_button"]
